--- a/index.html
+++ b/index.html
@@ -20,77 +20,80 @@
         </nav>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li>+38 096 111 11 11</li>
+            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        
         <!--Секция особенности-->
         <section>
-            <div>
-                <h3>Внимание к деталям</h3>
-                <p>
-                    Идейные соображения, а также начало повседневной работы по
-                    формированию позиции.
-                </p>
-            </div>
-
-            <div>
-                <h3>Пунктуальность</h3>
-                <p>
-                    Задача организации, в особенности же рамки и место обучения кадров
-                    влечет за собой.
-                </p>
-            </div>
-
-            <div>
-                <h3>Планирование</h3>
-                <p>
-                    Равным образом консультация с широким активом в значительной степени
-                    обуславливает.
-                </p>
-            </div>
-
-            <div>
-                <h3>Современные технологии</h3>
-                <p>
-                    Значимость этих проблем настолько очевидна, что реализация плановых
-                    заданий.
-                </p>
-            </div>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>
+                        Идейные соображения, а также начало повседневной работы по
+                        формированию позиции.
+                    </p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>
+                        Задача организации, в особенности же рамки и место обучения кадров
+                        влечет за собой.
+                    </p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>
+                        Равным образом консультация с широким активом в значительной степени
+                        обуславливает.
+                    </p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>
+                        Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.
+                    </p>
+                </li>
+            </ul>
         </section>
         <!--Секция чем мы занимаемся-->
         <section>
             <h2>Чем мы занимаемся</h2>
-            +
-            <img src="images/img.jpg" alt="Marketing" width="270" />
-            <img src="images/img-1.jpg" alt="developer" width="270" />
-            <img src="images/img-2.jpg" alt="design" width="270" />
+            <ul>
+                <li><img src="images/img.jpg" alt="Маркетинг" width="270" /></li>
+                <li><img src="images/img-1.jpg" alt="Разработка" width="270" /></li>
+                <li><img src="images/img-2.jpg" alt="Дизайн" width="270" /></li>
+            </ul>
         </section>
         <!--Секция наша команда-->
         <section>
             <h2>Наша команда</h2>
             <div>
-                <img src="images/img-3.jpg" alt="photo-product-designer" width="270" />
+                <img src="images/img-3.jpg" alt="фотография-дизайнера" width="270" />
                 <h3>Игорь Демьяненко</h3>
-                <h4>Product Designer</h4>
+                <p>Product Designer</p>
             </div>
             <div>
-                <img src="images/img-4.jpg" alt="photo-frontend-developer" width="270" />
+                <img src="images/img-4.jpg" alt="фотография-разработчика" width="270" />
                 <h3>Ольга Репина</h3>
-                <h4>Frontend Developer</h4>
+                <p>Frontend Developer</p>
             </div>
             <div>
-                <img src="images/img-5.jpg" alt="photo-marketing" width="270" />
+                <img src="images/img-5.jpg" alt="фотография-маркетолога" width="270" />
                 <h3>Николай Тарасов</h3>
-                <h4>Marketing</h4>
+                <p>Marketing</p>
             </div>
             <div>
-                <img src="images/img-6.jpg" alt="photo-ui-designer" width="270" />
+                <img src="images/img-6.jpg" alt="фотография-графического-дизайнера" width="270" />
                 <h3>Михаил Ермаков</h3>
-                <h4>UI Designer</h4>
+                <p>UI Designer</p>
             </div>
         </section>
     </main>
@@ -99,12 +102,11 @@
         <a href="/index.html">WebStudio</a>
         <address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li>info@example.com</li>
-                <li>+38 099 111 11 11</li>
+                <li><a href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
 </body>
-
 </html>
